# CSCN73060_25W_Sec3_Group2_WebProject

./: README.md
Group2WebProject/: CMakeLists.txt  main.cpp
Group2WebProject/public/: Index.html  Profile.html  book.html  manage.html  styles.css
Group2WebProject/public/scripts/: book.js  manage.js  myquote.js
Group2WebProject/public/styles/: style.css
